--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -47,7 +47,7 @@
     top: 0;
     left: 0;
     display: flex;
-    height: 100vh;
+    height: 100px;
     width: 100%;
     padding-left: 190px;
     padding-right: 190px;
@@ -113,8 +113,37 @@
     
   }
   
+  .banner {
+    margin-top: 20px;
+  }
   
-     
+  .banner img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .imagem-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .imagem-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  .imagem-item {
+    flex-basis: 23%;
+    margin: 0 10px 20px 10px;
+  }
+  
+  .imagem-item img {
+    width: 100%;
+    height: auto;
+  }
    
     
 
