--- a/src/componentes/Pages/Pagamento/Payment.css
+++ b/src/componentes/Pages/Pagamento/Payment.css
@@ -22,6 +22,7 @@
   
   .payment-form-left .logo {
     width: 50%;
+    margin-top:-150px ;
     height: auto;
   }
   
@@ -32,7 +33,7 @@
   }
 
   .payment-form-right h2{
-    margin-top: 20px;
+    margin-top:1px;
     font-size: 34px;
     max-width: 700;
   }
@@ -76,6 +77,7 @@
   }
   
   .payment-methods img {
+    margin-top: 20px;
     margin-right: 10px;
   }
   
@@ -97,17 +99,19 @@
     background-color: #004A3f;
   }
   
-  .footer {
+  .footer-payment {
     position: absolute;
-    top: 850px;
+    top: 1000px;
+    left: 270px;
     
-    text-align: center;
-    margin-top: 50px;
+    
   }
 
-  .footer-links {
+  .footer-paymentlinks {
     position: absolute;
     text-align: center;
+    top: 1000px;
+    left: 1250px;
     
    
     
@@ -117,24 +121,24 @@
     margin-bottom: 10px;
   }
   
-  .footer-links ul {
+  .footer-paymentlinks ul {
     list-style: none;
     padding: 0;
   }
   
-  .footer-links ul li {
+  .footer-paymentlinks ul li {
     display: inline;
     margin-right: 10px;
   }
   
-  .footer-links ul li a {
+  .footer-paymentlinks ul li a {
     text-decoration: none;
     color: #004A3F;
     font-size: 14px;
-    margin-left: 550px;
+    
   }
   
-  .footer-links ul li a:hover {
+  .footer-paymentlinks ul li a:hover {
     text-decoration: underline;
   }
   
