--- a/src/componentes/Pages/Sucesso/Sucess.css
+++ b/src/componentes/Pages/Sucesso/Sucess.css
@@ -1,65 +1,89 @@
 /* src/Pages/Success/Success.css */
 
 .success-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: #f8f9fa;
-    height: 100vh;
-  }
-  
-  .success-message {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .success-message h1 {
-    font-size: 24px;
-    color: #28a745;
-    margin: 0;
-  }
-  
-  .success-message h2 {
-    font-size: 32px;
-    color: #000;
-    margin: 0;
-  }
-  
-  .payment-details {
-    width: 100%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    margin-bottom: 20px;
-  }
-  
-  .payment-details h3 {
-    margin-top: 0;
-    margin-bottom: 10px;
-  }
-  
-  .payment-details p {
-    margin: 5px 0;
-  }
-  
-  button {
-    width: 100%;
-    max-width: 400px;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-bottom: 10px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.success-title {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+  color: #2ecc71;
+  font-weight: bold;
+}
+
+.success-subtitle {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  color: #34495e;
+}
+
+.photos-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.photo-item {
+  background: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 300px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+
+.photo-item:hover {
+  transform: scale(1.05);
+}
+
+.photo-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.photo-details {
+  padding: 15px;
+  text-align: left;
+}
+
+.photo-title {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  color: #2c3e50;
+}
+
+.photo-description {
+  font-size: 1em;
+  color: #7f8c8d;
+}
+
+.download-button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 15px;
+  background-color: #3498db;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.download-button:hover {
+  background-color: #2980b9;
+}
+
+.remaining-downloads {
+  font-size: 1.5em;
+  margin-top: 20px;
+  color: #2980b9;
+  font-weight: bold;
+}
