--- a/src/componentes/Pages/Pagamento/Payment.css
+++ b/src/componentes/Pages/Pagamento/Payment.css
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    margin: 0 auto;
+    width: 1500px;
+    height: 100%;
+
     
   }
   
@@ -22,7 +25,7 @@
   
   .payment-form-left .logo {
     width: 50%;
-    margin-top:-150px ;
+    
     height: auto;
   }
   
@@ -101,8 +104,8 @@
   
   .footer-payment {
     position: absolute;
-    top: 1000px;
-    left: 270px;
+    top: 900px;
+    left: 660px;
     
     
   }
@@ -118,7 +121,7 @@
   }
   
   .footer p {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   .footer-paymentlinks ul {
@@ -128,7 +131,9 @@
   
   .footer-paymentlinks ul li {
     display: inline;
-    margin-right: 10px;
+    margin-left: 90px;
+    
+    
   }
   
   .footer-paymentlinks ul li a {
